W7-J1: session, redis, pug

--- a/helloSession/views/layout.pug
+++ b/helloSession/views/layout.pug
@@ -21,6 +21,8 @@ html
                 a(href="/login") Log In
             else
               li
+                a(href="/add-address") Add Address
+              li
                 a(href="/logout") Log Out
 
     .container
