--- a/helloSession/views/login.pug
+++ b/helloSession/views/login.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h2 Log In
 
-  if message != ''
+  if(message)
     .alert.alert-error #{message}
   form(action="/login",method="post")
     div
